k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: staging
spec:
  host: staging
  subsets:
    - name: v050
      labels:
        version: v0.5.0
    - name: v060
      labels:
        version: v0.6.0
